# multica-backend

./: .gitignore  .goreleaser.yml  AGENTS.md  CLAUDE.md  CLI_AND_DAEMON.md  CLI_INSTALL.md  CONTRIBUTING.md  Dockerfile  Dockerfile.web  HANDOFF_ARCHITECTURE_AUDIT.md  LICENSE  Makefile  PROGRESS.md  README.md  README.zh-CN.md  SELF_HOSTING.md  SELF_HOSTING_ADVANCED.md  SELF_HOSTING_AI.md  docker-compose.selfhost.yml  docker-compose.yml  get-code.cjs  input.txt  package.json  pnpm-lock.yaml  railway-vars.json  railway.json  turbo.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
_tmp/: package-lock.json  package.json
apps/desktop/: electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json
apps/docs/: package.json
apps/web/: components.json  eslint.config.mjs  next.config.ts  package.json  proxy.ts
aurion-agent-runtime/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  railway.toml
aurion-agent-runtime/apps/api/: __init__.py  main.py
aurion-agent-runtime/cli/: aurion.py
aurion-agent-runtime/migrations/: env.py
aurion-agent-runtime/migrations/versions/: 001_initial_schema.py  002_add_files_table.py
aurion-agent-runtime/skills/code-review/: skill.yaml
aurion-agent-runtime/tests/: conftest.py  test_api.py  test_e2e_flow.py  test_event_bus.py  test_models.py  test_sandbox.py  test_tool_executor.py
docker/: entrypoint.sh
docs/: codex-sandbox-troubleshooting.md  design.md  workspace-url-refactor-proposal.md
docs/plans/: 2026-04-08-monorepo-extraction.md  (+7 more)
e2e/: auth.spec.ts  deep-reality-check.spec.ts  fixtures.ts  helpers.ts
scripts/: check.sh  ensure-postgres.sh  fix-ws-env.mjs  init-worktree-env.sh  install.ps1  install.sh  set-agent-model.mjs  simulate-agents.mjs  test-session.mjs
(+162 files in other folders)
