[project]
name = "aurion-agent-runtime"
version = "1.0.0"
description = "Open-source, self-hostable alternative to Claude Managed Agents"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
readme = "README.md"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",

    # Redis
    "redis[hiredis]>=5.2.0",

    # LLM Providers
    "anthropic>=0.42.0",
    "openai>=1.55.0",
    "google-genai>=1.0.0",
    "groq>=0.12.0",

    # Agent Framework
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # Sandbox
    "e2b>=1.0.0",
    "e2b-code-interpreter>=1.0.0",
    "docker>=7.0.0",

    # MCP
    "mcp>=1.0.0",

    # Memory
    "graphiti-core>=0.5.0",

    # Search / Web
    "tavily-python>=0.5.0",
    "httpx>=0.27.0",

    # Observability
    "langfuse>=2.50.0",

    # Utils
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
    "click>=8.1.0",
]

[project.scripts]
aurion = "cli.aurion:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
